# devops-cicd-kubernetes-gitops

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CI_CD_IMPROVEMENTS.md  CI_PIPELINE_FIXES.md  DOCKER_COMPOSE_FIX.md  DOCKER_IMPROVEMENTS.md  Dockerfile  ENV_FIX_SUMMARY.md  ENV_SECURITY_GUIDE.md  README.md  SECURITY_FIX_GUIDE.md  TRIVY_SECURITY_FIX.md  docker-compose.yml  env.example  fix.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  gitops.md  monitoring.md  security-fixes.md
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev/: deployment-patch.yaml  kustomization.yaml
k8s/overlays/prod/: deployment-patch.yaml  hpa.yaml  ingress.yaml  kustomization.yaml
k8s/overlays/staging/: deployment-patch.yaml  kustomization.yaml
scripts/: deploy.sh  security-check.sh  setup.sh
src/: FIXES_CHANGELOG.md  app.py  config.py  requirements.txt  wsgi.py
terraform/gcp-gke-cluster/: ALTERNATIVE.md  MIGRATION.md  README.md  provider.tf
terraform/gcp-gke-cluster/envs/dev/: main.tf  outputs.tf  variables.tf
terraform/gcp-gke-cluster/envs/prod/: main.tf  variables.tf
terraform/gcp-gke-cluster/envs/staging/: main.tf  variables.tf
terraform/gcp-gke-cluster/modules/gke/: main.tf  outputs.tf  variables.tf
terraform/gcp-gke-cluster/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/gcp-gke-cluster/modules/network/: main.tf  outputs.tf  variables.tf
terraform/gcp_storage/: main.tf  outputs.tf  variables.tf
tests/: test_app.py
